--- a/src/employers/employers.styles.css
+++ b/src/employers/employers.styles.css
@@ -46,3 +46,36 @@ padding:12px 70px ;
 .visa-note{
     font-size: 12px;
 }
+.emplye-header {
+    text-align: left;
+    padding: 10px 0;
+}
+.emplye-header span {
+    padding: 10px 35px;
+    font-weight: 600;
+}
+
+
+
+
+/* ---------Responsive Css Start------- */
+@media  screen and (max-width: 1199px) {
+    .emplye-header span {
+        padding: 10px 10px;
+        font-size: 15px;
+    }
+    .post-jobs-inner-div span {
+        padding: 12px 30px;
+        font-size: 15px;
+    }
+}
+@media screen and (max-width: 991px) {
+    .emplye-header span {
+        padding: 10px 5px;
+        font-size: 12px;
+    }
+    .post-jobs-inner-div span {
+        padding: 12px 18px;
+        font-size: 12px;
+    }
+}
